--- a/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
+++ b/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
@@ -16,6 +16,7 @@
         <StackPanel Margin="8">
             <StackPanel Orientation="Horizontal">
                 <TextBlock
+                    x:Uid="NetworkDiagnosisTitle"
                     Margin="12,12,0,0"
                     HorizontalAlignment="Left"
                     FontSize="{StaticResource DialogTitleFontSize}"
@@ -49,6 +50,7 @@
                 Visibility="Collapsed">
                 <Border>
                     <TextBlock
+                        x:Uid="ReportByEmailTextBlock"
                         Margin="12"
                         FontWeight="Bold"
                         Foreground="{ThemeResource SystemBaseHighColor}"
@@ -62,6 +64,7 @@
                 Click="CloseButton_Click">
                 <Border>
                     <TextBlock
+                        x:Uid="CloseButton"
                         Margin="12"
                         FontWeight="Bold"
                         Foreground="{ThemeResource SystemBaseHighColor}"
