--- a/MyerSplash/View/Uc/DownloadItemTemplate.xaml
+++ b/MyerSplash/View/Uc/DownloadItemTemplate.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    mc:Ignorable="d" FontFamily="Segoe UI">
+    FontFamily="Segoe UI"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style
             x:Key="SetAsButtonStyle"
@@ -43,13 +44,6 @@
             PointerExited="Img_PointerExited"
             Source="{Binding ImageItem.BitmapSource.Bitmap, Mode=OneWay}"
             Stretch="UniformToFill" />
-        <TextBlock
-            Margin="12,0,0,12"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Bottom"
-            FontWeight="Bold"
-            Foreground="White"
-            Text="{Binding DownloadStatus, Mode=OneWay}" />
         <Button
             x:Name="ShareBtn"
             Grid.RowSpan="1"
@@ -94,6 +88,7 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        x:Uid="SetAsBackgroundTextBlock"
                         FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
@@ -109,6 +104,7 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        x:Uid="SetAsLockscreenTextBlock"
                         FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
@@ -124,6 +120,7 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        x:Uid="SetAsBothTextBlock"
                         FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
@@ -164,6 +161,7 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock
                                 x:Name="SetAsTB"
+                                x:Uid="SetAsTB"
                                 Grid.ColumnSpan="2"
                                 Margin="12,0,0,0"
                                 FontSize="{StaticResource SmallFontSize}"
@@ -193,7 +191,7 @@
                             Foreground="{Binding ImageItem.InfoForeColor, Mode=OneWay, FallbackValue=White}"
                             Glyph="&#xEC50;" />
                         <ToolTipService.ToolTip>
-                            <TextBlock Text="OPEN EXPLORER" />
+                            <TextBlock x:Uid="OpenExplorerTextBlock" Text="OPEN EXPLORER" />
                         </ToolTipService.ToolTip>
                     </Button>
                 </Grid>
@@ -215,8 +213,10 @@
                         Command="{Binding RetryDownloadCommand, Mode=OneWay}"
                         Style="{StaticResource ListButtonStyle}">
                         <TextBlock
+                            x:Uid="RetryTB"
                             Grid.ColumnSpan="2"
                             Margin="12,0,0,0"
+                            FontSize="{StaticResource SmallFontSize}"
                             FontWeight="Bold"
                             Foreground="{Binding ImageItem.InfoForeColor, Mode=OneWay, FallbackValue=White}"
                             Text="RETRY" />
