--- a/MyerSplash/View/Uc/NoNetworkControl.xaml
+++ b/MyerSplash/View/Uc/NoNetworkControl.xaml
@@ -12,6 +12,7 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock
+            x:Uid="OopsErrorText"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="50"
@@ -19,6 +20,7 @@
             Foreground="{ThemeResource SystemBaseHighColor}"
             Text="Oops :(" />
         <TextBlock
+            x:Uid="ErrorTitle"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="20"
@@ -35,7 +37,10 @@
             fcu:Style="{StaticResource MainButtonStyle}"
             Background="{ThemeResource SystemListLowColor}"
             Click="DiagnoseButton_Click">
-            <TextBlock Style="{StaticResource SettingItemButtonContentStyle}" Text="Diagnose Network" />
+            <TextBlock
+                x:Uid="DiagnoseNetworkTextBlock"
+                Style="{StaticResource SettingItemButtonContentStyle}"
+                Text="Diagnose Network" />
         </Button>
     </StackPanel>
 </UserControl>
