--- a/MyerSplash/View/Uc/Dialog/TipsControl.xaml
+++ b/MyerSplash/View/Uc/Dialog/TipsControl.xaml
@@ -2,8 +2,8 @@
     x:Class="MyerSplash.View.Uc.TipsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="400"
@@ -11,9 +11,7 @@
     d:DesignHeight="320"
     d:DesignWidth="400"
     mc:Ignorable="d">
-    <Grid 
-        cu:Background="{StaticResource AppBackgroundBrushDark}"
-        fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
+    <Grid cu:Background="{StaticResource AppBackgroundBrushDark}" fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition />
@@ -37,6 +35,7 @@
             </Button>
             <StackPanel Margin="16,0,0,0" Orientation="Horizontal">
                 <TextBlock
+                    x:Uid="FeatureTitle"
                     Margin="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
@@ -44,29 +43,15 @@
                     FontWeight="Bold"
                     Foreground="{StaticResource MyerSplashThemeColorBrush}"
                     Style="{StaticResource SubTitleTextBlockStyle}"
-                    Text="⚡ IMPORTANT NOTE" />
+                    Text="⚡ FEATURES" />
             </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="1" VerticalAlignment="Top" Margin="12,0,12,0">
-            <TextBlock TextWrapping="Wrap"
-                       LineHeight="2.1"
-                       Text="For Chinese users and other who can't view the hightlights and change their wallpapers in background: since my server has been blocked from China, you can only visit those features outside. &#x0a;&#x0a;Sorry about that :(&#x0a;&#x0a;Additionally, this version adds a network diagnosis tool in Settings.">
-            </TextBlock>
-            <Button
-            Margin="0,12"
-            VerticalAlignment="Bottom"
+        <StackPanel
             Grid.Row="1"
-            HorizontalAlignment="Stretch"
-            Click="DiagnoseButton_Click"
-            x:Name="DiagnoseButton"
-            fcu:Style="{StaticResource MainButtonStyle}"
-            Background="{StaticResource SettingsButtonBackgroundBrush}"
-            HorizontalContentAlignment="Left"
-            cu:Style="{StaticResource MainButtonCompatStyle}">
-                <TextBlock
-                   Style="{StaticResource SettingItemButtonContentStyle}"
-                   Text="Diagnose Network" />
-            </Button>
+            Margin="12,0,12,0"
+            VerticalAlignment="Top">
+            <TextBlock x:Uid="FeatureContent" Text="Support following system theme" />
+            <Image Margin="0,12,0,0" Source="/Assets/Image/prom.png" />
         </StackPanel>
     </Grid>
 </UserControl>
